# erlexec

./: .gitignore  .travis.yml  404.html  AUTHORS  CHANGELOG.txt  LICENSE  Makefile  Makefile.am  README  README.md  RELEASE.md  TODO  api-reference.html  bootstrap.mk  build  configure.ac  edoc-info  exec.html  exec_app.html  index.html  license.html  modules-frame.html  overview-summary.html  packages-frame.html  readme.html  rebar  rebar.config  rebar.config.script  search.html  stylesheet.css  vsn.mk
.github/: FUNDING.yml
.github/workflows/: erlang.yaml  erlang.yml  release.yaml
c_src/: Makefile  ei++.cpp  ei++.h  ei++.hpp  exec.cpp  exec.hpp  exec_impl.cpp  poll_handler.hpp  select_handler.hpp  ttymodes.h  ttymodes.hpp
include/: exec.hrl
priv/test/: delay_setsid_deny_child_setpgid.c  deny_setpgid.c  exec_port_fork_wrapper.c
src/: edoc.css  erlexec.app.src  exec.app.src  exec.erl  exec_app.erl  exec_util.erl  overview.edoc
test/: test1.sh  test_exec.erl
